se modifico barra de navegacion

--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
     <!---Section (inicio)-->
     <section>
      <nav>
-            <ul>
-             <li class="lista-juegos"><a href="./pages/juegos.html">Juegos</a></li>
-             <li class="lista-consolas"><a href="./pages/consolas.html">Consolas</a></li>
-             <li class="lista-accesorios"><a href="./pages/accesorios.html">Accesorios</a></li>
-             <li class="lista-contacto"><a href="./pages/contacto.html" target="_blank">Contacto</a></li>
+            <ul class="nav-body">
+             <li class="nav-item"><a href="./pages/juegos.html">Juegos</a></li>
+             <li class="nav-item"><a href="./pages/consolas.html">Consolas</a></li>
+             <li class="nav-item"><a href="./pages/accesorios.html">Accesorios</a></li>
+             <li class="nav-item"><a href="./pages/contacto.html" target="_blank">Contacto</a></li>
             </ul>
     </nav>
    </section>
